[gd_scene load_steps=10 format=3 uid="uid://bvvmavom2oouc"]

[ext_resource type="Script" path="res://core/devices/ValveElService.gd" id="1_g7lbp"]
[ext_resource type="Texture2D" uid="uid://hq6qvroofohp" path="res://icons/frame_elements/ValveElConn.png" id="1_ys0eg"]
[ext_resource type="Texture2D" uid="uid://cgqtw81411xsb" path="res://icons/frame_elements/Valve_electric_motor.png" id="2_e2kby"]
[ext_resource type="PackedScene" uid="uid://btt61xvymlnub" path="res://core/devices/menus/mainCircle.tscn" id="2_hld26"]
[ext_resource type="PackedScene" uid="uid://ds5viwncwvcci" path="res://core/devices/menus/PopButton.tscn" id="3_fy42o"]
[ext_resource type="Texture2D" uid="uid://caad6bc8st15r" path="res://icons/frame_elements/Valve.png" id="13_od7x5"]

[sub_resource type="Animation" id="Animation_1md53"]
resource_name = "closing"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprites/ValveLeft:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1e+06, 381246, 1),
"update": 0,
"values": [Color(0.937255, 0.937255, 0.937255, 1), Color(0, 0.917647, 0, 1), Color(0.937255, 0.937255, 0.937255, 1)]
}

[sub_resource type="Animation" id="Animation_l3k6j"]
resource_name = "opening"
loop_mode = 1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qfegg"]
_data = {
"closing": SubResource("Animation_1md53"),
"opening": SubResource("Animation_l3k6j")
}

[node name="Valve" type="Node2D"]
script = ExtResource("1_g7lbp")
main_name = Object(Node2D,"_import_path":NodePath(""),"unique_name_in_owner":false,"process_mode":0,"process_priority":0,"process_physics_priority":0,"process_thread_group":0,"editor_description":"","visible":true,"modulate":Color(1, 1, 1, 1),"self_modulate":Color(1, 1, 1, 1),"show_behind_parent":false,"top_level":false,"clip_children":0,"light_mask":1,"visibility_layer":1,"z_index":0,"z_as_relative":true,"y_sort_enabled":false,"texture_filter":0,"texture_repeat":0,"material":null,"use_parent_material":false,"position":Vector2(0, 0),"rotation":0.0,"scale":Vector2(1, 1),"skew":0.0,"script":Resource("res://core/devices/menus/main-cir.gd"),"player":Object(AnimationPlayer,"_import_path":NodePath(""),"unique_name_in_owner":false,"process_mode":0,"process_priority":0,"process_physics_priority":0,"process_thread_group":0,"editor_description":"","root_node":NodePath(".."),"autoplay":"","reset_on_save":true,"playback_process_mode":1,"playback_default_blend_time":0.0,"speed_scale":1.0,"method_call_mode":0,"audio_max_polyphony":32,"movie_quit_on_finish":false,"libraries":{
"": Resource("res://Themes/For_scheme_elements/Menus/play1.tres")
},"blend_times":[],"script":null)
,"mainBG":Object(Polygon2D,"_import_path":NodePath(""),"unique_name_in_owner":false,"process_mode":0,"process_priority":0,"process_physics_priority":0,"process_thread_group":0,"editor_description":"","visible":true,"modulate":Color(0.2, 0.313726, 0.407843, 1),"self_modulate":Color(1, 1, 1, 1),"show_behind_parent":false,"top_level":false,"clip_children":0,"light_mask":1,"visibility_layer":1,"z_index":-1,"z_as_relative":true,"y_sort_enabled":false,"texture_filter":0,"texture_repeat":0,"material":null,"use_parent_material":false,"position":Vector2(0, 0),"rotation":0.0,"scale":Vector2(1, 1),"skew":0.0,"color":Color(0, 0, 0, 0.0980392),"offset":Vector2(-1, 4),"antialiased":true,"texture":null,"texture_offset":Vector2(0, 0),"texture_scale":Vector2(1, 1),"texture_rotation":0.0,"skeleton":NodePath(""),"invert_enabled":false,"invert_border":100.0,"polygon":PackedVector2Array(88, 0, 87.5763, 8.62551, 86.3091, 17.1679, 84.2108, 25.545, 81.3014, 33.6761, 77.6091, 41.4829, 73.1693, 48.8902, 68.0249, 55.8266, 62.2254, 62.2254, 55.8266, 68.0249, 48.8902, 73.1693, 41.4829, 77.6091, 33.6761, 81.3014, 25.545, 84.2108, 17.1679, 86.3091, 8.62551, 87.5763, -3.36914e-14, 88, 5.38845e-15, 88, -8.62551, 87.5763, -17.1679, 86.3091, -25.545, 84.2108, -33.6761, 81.3014, -41.4829, 77.6091, -48.8902, 73.1693, -55.8266, 68.0249, -62.2254, 62.2254, -68.0249, 55.8266, -73.1693, 48.8902, -77.6091, 41.4829, -81.3014, 33.6761, -84.2108, 25.545, -86.3091, 17.1679, -87.5763, 8.62551, -88, -1.45543e-13, -88, 1.07769e-14, -87.5763, -8.62551, -86.3091, -17.1679, -84.2108, -25.545, -81.3014, -33.6761, -77.6091, -41.4829, -73.1693, -48.8902, -68.0249, -55.8266, -62.2254, -62.2254, -55.8266, -68.0249, -48.8902, -73.1693, -41.4829, -77.6091, -33.6761, -81.3014, -25.545, -84.2108, -17.1679, -86.3091, -8.62551, -87.5763, -1.72485e-13, -88, -1.61653e-14, -88, 8.62551, -87.5763, 17.1679, -86.3091, 25.545, -84.2108, 33.6761, -81.3014, 41.4829, -77.6091, 48.8902, -73.1693, 55.8266, -68.0249, 62.2254, -62.2254, 68.0249, -55.8266, 73.1693, -48.8902, 77.6091, -41.4829, 81.3014, -33.6761, 84.2108, -25.545, 86.3091, -17.1679, 87.5763, -8.62551, 88, -4.90512e-13),"uv":PackedVector2Array(),"vertex_colors":PackedColorArray(),"polygons":[],"bones":[],"internal_vertex_count":0,"script":Resource("res://core/primitives/pill.gd"),"width":176.0,"height":176.0,"roundness":100.0,"smooth":16.0,"real_roundness":88.0,"cir1_pos":Vector2(0, 0),"cir2_pos":Vector2(0, 0),"cir_rad":1.0,"not_square":true,"rect_dim":Rect2(0, 0, 2, 2),"pure_rect":false,"pure_circle":false,"points":PackedVector2Array(88, 0, 87.5763, 8.62551, 86.3091, 17.1679, 84.2108, 25.545, 81.3014, 33.6761, 77.6091, 41.4829, 73.1693, 48.8902, 68.0249, 55.8266, 62.2254, 62.2254, 55.8266, 68.0249, 48.8902, 73.1693, 41.4829, 77.6091, 33.6761, 81.3014, 25.545, 84.2108, 17.1679, 86.3091, 8.62551, 87.5763, -3.36914e-14, 88, 5.38845e-15, 88, -8.62551, 87.5763, -17.1679, 86.3091, -25.545, 84.2108, -33.6761, 81.3014, -41.4829, 77.6091, -48.8902, 73.1693, -55.8266, 68.0249, -62.2254, 62.2254, -68.0249, 55.8266, -73.1693, 48.8902, -77.6091, 41.4829, -81.3014, 33.6761, -84.2108, 25.545, -86.3091, 17.1679, -87.5763, 8.62551, -88, -1.45543e-13, -88, 1.07769e-14, -87.5763, -8.62551, -86.3091, -17.1679, -84.2108, -25.545, -81.3014, -33.6761, -77.6091, -41.4829, -73.1693, -48.8902, -68.0249, -55.8266, -62.2254, -62.2254, -55.8266, -68.0249, -48.8902, -73.1693, -41.4829, -77.6091, -33.6761, -81.3014, -25.545, -84.2108, -17.1679, -86.3091, -8.62551, -87.5763, -1.72485e-13, -88, -1.61653e-14, -88, 8.62551, -87.5763, 17.1679, -86.3091, 25.545, -84.2108, 33.6761, -81.3014, 41.4829, -77.6091, 48.8902, -73.1693, 55.8266, -68.0249, 62.2254, -62.2254, 68.0249, -55.8266, 73.1693, -48.8902, 77.6091, -41.4829, 81.3014, -33.6761, 84.2108, -25.545, 86.3091, -17.1679, 87.5763, -8.62551, 88, -4.90512e-13),"colors":PackedColorArray(1, 1, 1, 1))
,"outline":Object(Polygon2D,"_import_path":NodePath(""),"unique_name_in_owner":false,"process_mode":0,"process_priority":0,"process_physics_priority":0,"process_thread_group":0,"editor_description":"","visible":true,"modulate":Color(1, 1, 1, 1),"self_modulate":Color(1, 1, 1, 1),"show_behind_parent":false,"top_level":false,"clip_children":0,"light_mask":1,"visibility_layer":1,"z_index":0,"z_as_relative":true,"y_sort_enabled":false,"texture_filter":0,"texture_repeat":0,"material":null,"use_parent_material":false,"position":Vector2(0, 0),"rotation":0.0,"scale":Vector2(1, 1),"skew":0.0,"color":Color(1, 1, 1, 1),"offset":Vector2(0, 0),"antialiased":true,"texture":null,"texture_offset":Vector2(0, 0),"texture_scale":Vector2(1, 1),"texture_rotation":0.0,"skeleton":NodePath(""),"invert_enabled":false,"invert_border":100.0,"polygon":PackedVector2Array(88, 0, 87.5763, 8.62551, 86.3091, 17.1679, 84.2108, 25.545, 81.3014, 33.6761, 77.6091, 41.4829, 73.1693, 48.8902, 68.0249, 55.8266, 62.2254, 62.2254, 55.8266, 68.0249, 48.8902, 73.1693, 41.4829, 77.6091, 33.6761, 81.3014, 25.545, 84.2108, 17.1679, 86.3091, 8.62551, 87.5763, -3.36914e-14, 88, 5.38845e-15, 88, -8.62551, 87.5763, -17.1679, 86.3091, -25.545, 84.2108, -33.6761, 81.3014, -41.4829, 77.6091, -48.8902, 73.1693, -55.8266, 68.0249, -62.2254, 62.2254, -68.0249, 55.8266, -73.1693, 48.8902, -77.6091, 41.4829, -81.3014, 33.6761, -84.2108, 25.545, -86.3091, 17.1679, -87.5763, 8.62551, -88, -1.45543e-13, -88, 1.07769e-14, -87.5763, -8.62551, -86.3091, -17.1679, -84.2108, -25.545, -81.3014, -33.6761, -77.6091, -41.4829, -73.1693, -48.8902, -68.0249, -55.8266, -62.2254, -62.2254, -55.8266, -68.0249, -48.8902, -73.1693, -41.4829, -77.6091, -33.6761, -81.3014, -25.545, -84.2108, -17.1679, -86.3091, -8.62551, -87.5763, -1.72485e-13, -88, -1.61653e-14, -88, 8.62551, -87.5763, 17.1679, -86.3091, 25.545, -84.2108, 33.6761, -81.3014, 41.4829, -77.6091, 48.8902, -73.1693, 55.8266, -68.0249, 62.2254, -62.2254, 68.0249, -55.8266, 73.1693, -48.8902, 77.6091, -41.4829, 81.3014, -33.6761, 84.2108, -25.545, 86.3091, -17.1679, 87.5763, -8.62551, 88, -4.90512e-13),"uv":PackedVector2Array(),"vertex_colors":PackedColorArray(),"polygons":[],"bones":[],"internal_vertex_count":0,"script":Resource("res://core/primitives/pill.gd"),"width":176.0,"height":176.0,"roundness":100.0,"smooth":16.0,"real_roundness":88.0,"cir1_pos":Vector2(0, 0),"cir2_pos":Vector2(0, 0),"cir_rad":1.0,"not_square":true,"rect_dim":Rect2(0, 0, 2, 2),"pure_rect":false,"pure_circle":false,"points":PackedVector2Array(88, 0, 87.5763, 8.62551, 86.3091, 17.1679, 84.2108, 25.545, 81.3014, 33.6761, 77.6091, 41.4829, 73.1693, 48.8902, 68.0249, 55.8266, 62.2254, 62.2254, 55.8266, 68.0249, 48.8902, 73.1693, 41.4829, 77.6091, 33.6761, 81.3014, 25.545, 84.2108, 17.1679, 86.3091, 8.62551, 87.5763, -3.36914e-14, 88, 5.38845e-15, 88, -8.62551, 87.5763, -17.1679, 86.3091, -25.545, 84.2108, -33.6761, 81.3014, -41.4829, 77.6091, -48.8902, 73.1693, -55.8266, 68.0249, -62.2254, 62.2254, -68.0249, 55.8266, -73.1693, 48.8902, -77.6091, 41.4829, -81.3014, 33.6761, -84.2108, 25.545, -86.3091, 17.1679, -87.5763, 8.62551, -88, -1.45543e-13, -88, 1.07769e-14, -87.5763, -8.62551, -86.3091, -17.1679, -84.2108, -25.545, -81.3014, -33.6761, -77.6091, -41.4829, -73.1693, -48.8902, -68.0249, -55.8266, -62.2254, -62.2254, -55.8266, -68.0249, -48.8902, -73.1693, -41.4829, -77.6091, -33.6761, -81.3014, -25.545, -84.2108, -17.1679, -86.3091, -8.62551, -87.5763, -1.72485e-13, -88, -1.61653e-14, -88, 8.62551, -87.5763, 17.1679, -86.3091, 25.545, -84.2108, 33.6761, -81.3014, 41.4829, -77.6091, 48.8902, -73.1693, 55.8266, -68.0249, 62.2254, -62.2254, 68.0249, -55.8266, 73.1693, -48.8902, 77.6091, -41.4829, 81.3014, -33.6761, 84.2108, -25.545, 86.3091, -17.1679, 87.5763, -8.62551, 88, -4.90512e-13),"colors":PackedColorArray(1, 1, 1, 1))
,"mainTop":Object(Polygon2D,"_import_path":NodePath(""),"unique_name_in_owner":false,"process_mode":0,"process_priority":0,"process_physics_priority":0,"process_thread_group":0,"editor_description":"","visible":true,"modulate":Color(0.2, 0.313726, 0.407843, 1),"self_modulate":Color(1, 1, 1, 1),"show_behind_parent":false,"top_level":false,"clip_children":0,"light_mask":1,"visibility_layer":1,"z_index":1,"z_as_relative":true,"y_sort_enabled":false,"texture_filter":0,"texture_repeat":0,"material":null,"use_parent_material":false,"position":Vector2(0, 0),"rotation":0.0,"scale":Vector2(1, 1),"skew":0.0,"color":Color(1, 1, 1, 1),"offset":Vector2(0, 0),"antialiased":true,"texture":null,"texture_offset":Vector2(0, 0),"texture_scale":Vector2(1, 1),"texture_rotation":0.0,"skeleton":NodePath(""),"invert_enabled":false,"invert_border":100.0,"polygon":PackedVector2Array(86, 0, 85.5859, 8.42947, 84.3475, 16.7778, 82.2969, 24.9645, 79.4536, 32.9108, 75.8452, 40.5401, 71.5064, 47.779, 66.4789, 54.5578, 60.8112, 60.8112, 54.5578, 66.4789, 47.779, 71.5064, 40.5401, 75.8452, 32.9108, 79.4536, 24.9645, 82.2969, 16.7778, 84.3475, 8.42947, 85.5859, -3.29257e-14, 86, 5.26598e-15, 86, -8.42947, 85.5859, -16.7778, 84.3475, -24.9645, 82.2969, -32.9108, 79.4536, -40.5401, 75.8452, -47.779, 71.5064, -54.5578, 66.4789, -60.8112, 60.8112, -66.4789, 54.5578, -71.5064, 47.779, -75.8452, 40.5401, -79.4536, 32.9108, -82.2969, 24.9645, -84.3475, 16.7778, -85.5859, 8.42947, -86, -1.42235e-13, -86, 1.0532e-14, -85.5859, -8.42947, -84.3475, -16.7778, -82.2969, -24.9645, -79.4536, -32.9108, -75.8452, -40.5401, -71.5064, -47.779, -66.4789, -54.5578, -60.8112, -60.8112, -54.5578, -66.4789, -47.779, -71.5064, -40.5401, -75.8452, -32.9108, -79.4536, -24.9645, -82.2969, -16.7778, -84.3475, -8.42947, -85.5859, -1.68565e-13, -86, -1.57979e-14, -86, 8.42947, -85.5859, 16.7778, -84.3475, 24.9645, -82.2969, 32.9108, -79.4536, 40.5401, -75.8452, 47.779, -71.5064, 54.5578, -66.4789, 60.8112, -60.8112, 66.4789, -54.5578, 71.5064, -47.779, 75.8452, -40.5401, 79.4536, -32.9108, 82.2969, -24.9645, 84.3475, -16.7778, 85.5859, -8.42947, 86, -4.79364e-13),"uv":PackedVector2Array(),"vertex_colors":PackedColorArray(),"polygons":[],"bones":[],"internal_vertex_count":0,"script":Resource("res://core/primitives/pill.gd"),"width":172.0,"height":172.0,"roundness":100.0,"smooth":16.0,"real_roundness":86.0,"cir1_pos":Vector2(0, 0),"cir2_pos":Vector2(0, 0),"cir_rad":1.0,"not_square":true,"rect_dim":Rect2(0, 0, 2, 2),"pure_rect":false,"pure_circle":false,"points":PackedVector2Array(86, 0, 85.5859, 8.42947, 84.3475, 16.7778, 82.2969, 24.9645, 79.4536, 32.9108, 75.8452, 40.5401, 71.5064, 47.779, 66.4789, 54.5578, 60.8112, 60.8112, 54.5578, 66.4789, 47.779, 71.5064, 40.5401, 75.8452, 32.9108, 79.4536, 24.9645, 82.2969, 16.7778, 84.3475, 8.42947, 85.5859, -3.29257e-14, 86, 5.26598e-15, 86, -8.42947, 85.5859, -16.7778, 84.3475, -24.9645, 82.2969, -32.9108, 79.4536, -40.5401, 75.8452, -47.779, 71.5064, -54.5578, 66.4789, -60.8112, 60.8112, -66.4789, 54.5578, -71.5064, 47.779, -75.8452, 40.5401, -79.4536, 32.9108, -82.2969, 24.9645, -84.3475, 16.7778, -85.5859, 8.42947, -86, -1.42235e-13, -86, 1.0532e-14, -85.5859, -8.42947, -84.3475, -16.7778, -82.2969, -24.9645, -79.4536, -32.9108, -75.8452, -40.5401, -71.5064, -47.779, -66.4789, -54.5578, -60.8112, -60.8112, -54.5578, -66.4789, -47.779, -71.5064, -40.5401, -75.8452, -32.9108, -79.4536, -24.9645, -82.2969, -16.7778, -84.3475, -8.42947, -85.5859, -1.68565e-13, -86, -1.57979e-14, -86, 8.42947, -85.5859, 16.7778, -84.3475, 24.9645, -82.2969, 32.9108, -79.4536, 40.5401, -75.8452, 47.779, -71.5064, 54.5578, -66.4789, 60.8112, -60.8112, 66.4789, -54.5578, 71.5064, -47.779, 75.8452, -40.5401, 79.4536, -32.9108, 82.2969, -24.9645, 84.3475, -16.7778, 85.5859, -8.42947, 86, -4.79364e-13),"colors":PackedColorArray(1, 1, 1, 1))
,"button":Object(Button,"_import_path":NodePath(""),"unique_name_in_owner":false,"process_mode":0,"process_priority":0,"process_physics_priority":0,"process_thread_group":0,"editor_description":"","visible":true,"modulate":Color(1, 1, 1, 1),"self_modulate":Color(1, 1, 1, 1),"show_behind_parent":false,"top_level":false,"clip_children":0,"light_mask":1,"visibility_layer":1,"z_index":2,"z_as_relative":true,"y_sort_enabled":false,"texture_filter":0,"texture_repeat":0,"material":null,"use_parent_material":false,"clip_contents":false,"custom_minimum_size":Vector2(0, 0),"layout_direction":0,"layout_mode":3,"anchors_preset":8,"anchor_left":0.5,"anchor_top":0.5,"anchor_right":0.5,"anchor_bottom":0.5,"offset_left":-23.0,"offset_top":-32.0,"offset_right":23.0,"offset_bottom":16.0,"grow_horizontal":2,"grow_vertical":2,"rotation":0.0,"scale":Vector2(1, 1),"pivot_offset":Vector2(30, 19),"size_flags_horizontal":4,"size_flags_vertical":4,"size_flags_stretch_ratio":1.0,"auto_translate":true,"localize_numeral_system":true,"tooltip_text":"","focus_neighbor_left":NodePath(""),"focus_neighbor_top":NodePath(""),"focus_neighbor_right":NodePath(""),"focus_neighbor_bottom":NodePath(""),"focus_next":NodePath(""),"focus_previous":NodePath(""),"focus_mode":2,"mouse_filter":0,"mouse_force_pass_scroll_events":true,"mouse_default_cursor_shape":2,"shortcut_context":null,"theme":Resource("res://ui/themes/empty/empty.tres"),"theme_type_variation":&"","disabled":false,"toggle_mode":true,"button_pressed":false,"action_mode":1,"button_mask":1,"keep_pressed_outside":false,"button_group":null,"shortcut":null,"shortcut_feedback":true,"shortcut_in_tooltip":true,"text":"","icon":null,"flat":true,"alignment":1,"text_overrun_behavior":0,"clip_text":false,"icon_alignment":0,"vertical_icon_alignment":1,"expand_icon":false,"text_direction":0,"language":"","script":null)
,"pop":false,"enabled":true,"main_color":Color(0.2, 0.313726, 0.407843, 1),"outline_color":Color(1, 1, 1, 1))

sub_name = true

[node name="sprites" type="Node2D" parent="."]

[node name="ValveConn" type="Sprite2D" parent="sprites"]
z_index = 1
texture = ExtResource("1_ys0eg")
offset = Vector2(0, -10)

[node name="ValveElectricMotor" type="Sprite2D" parent="sprites"]
z_index = 1
texture = ExtResource("2_e2kby")
offset = Vector2(0, -10)

[node name="ValveElectricMotorRefusal" type="Sprite2D" parent="sprites"]
modulate = Color(1, 1, 1, 0)
z_index = 1
texture = ExtResource("2_e2kby")
offset = Vector2(0, -10)

[node name="ValveLeft" type="Sprite2D" parent="sprites"]
modulate = Color(0.937255, 0.937255, 0.937255, 1)
z_index = 1
texture = ExtResource("13_od7x5")

[node name="ValveLeftRefusal" type="Sprite2D" parent="sprites"]
modulate = Color(1, 1, 1, 0)
z_index = 1
texture = ExtResource("13_od7x5")

[node name="ValveRight" type="Sprite2D" parent="sprites"]
z_index = 1
texture = ExtResource("13_od7x5")
flip_h = true

[node name="ValveRightRefusal" type="Sprite2D" parent="sprites"]
modulate = Color(1, 1, 1, 0)
z_index = 1
texture = ExtResource("13_od7x5")
flip_h = true

[node name="main-cir" parent="." instance=ExtResource("2_hld26")]
enabled = true
main_color = Color(0.2, 0.313726, 0.407843, 1)
outline_color = Color(1, 1, 1, 1)

[node name="close" parent="main-cir" instance=ExtResource("3_fy42o")]
toggle_mode = true
text = "Закрыть"
text_color = Color(0, 0.917647, 0, 1)
main_color = Color(0.2, 0.313726, 0.407843, 1)
outline_color = Color(0, 0.917647, 0, 1)

[node name="Marker2D2" type="Marker2D" parent="main-cir/close"]
position = Vector2(87, 75)

[node name="open" parent="main-cir" instance=ExtResource("3_fy42o")]
toggle_mode = true
text = "Открыть"
text_color = Color(1, 0.580392, 0.156863, 1)
main_color = Color(0.2, 0.313726, 0.407843, 1)
outline_color = Color(1, 0.580392, 0.156863, 1)

[node name="Marker2D2" type="Marker2D" parent="main-cir/open"]
position = Vector2(-96, -50)

[node name="refusal" parent="main-cir" instance=ExtResource("3_fy42o")]
toggle_mode = false
text = "Отказ"
text_color = Color(1, 0.313726, 0.992157, 1)
main_color = Color(0.2, 0.313726, 0.407843, 1)
outline_color = Color(1, 0.313726, 0.992157, 1)

[node name="Marker2D2" type="Marker2D" parent="main-cir/refusal"]
position = Vector2(87, -51)

[node name="power" parent="main-cir/refusal" instance=ExtResource("3_fy42o")]
position = Vector2(87.0277, -50.9853)
toggle_mode = false
text = "Питание"
text_color = Color(1, 0.313726, 0.992157, 1)
main_color = Color(0.2, 0.313726, 0.407843, 1)
outline_color = Color(1, 0.313726, 0.992157, 1)

[node name="Marker2D2" type="Marker2D" parent="main-cir/refusal/power"]
position = Vector2(49, -37)

[node name="control" parent="main-cir/refusal" instance=ExtResource("3_fy42o")]
position = Vector2(86.9877, -51.0145)
toggle_mode = false
text = "Управл."
text_color = Color(1, 0.313726, 0.992157, 1)
main_color = Color(0.2, 0.313726, 0.407843, 1)
outline_color = Color(1, 0.313726, 0.992157, 1)

[node name="Marker2D" type="Marker2D" parent="main-cir/refusal/control"]
position = Vector2(49, 35)

[node name="signal_play" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qfegg")
}

[node name="accept" parent="." instance=ExtResource("3_fy42o")]
toggle_mode = false
text = "Принять"
main_color = Color(0.2, 0.313726, 0.407843, 1)
size = Vector2(92.83, 54)

[node name="Marker2D" type="Marker2D" parent="accept"]
position = Vector2(0, 102)

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
[connection signal="popped" from="main-cir" to="." method="_on_maincir_popped"]
[connection signal="b_toggled" from="main-cir/close" to="." method="_on_close_b_toggled"]
[connection signal="b_toggled" from="main-cir/open" to="." method="_on_open_b_toggled"]
[connection signal="b_pop_hide" from="main-cir/refusal" to="." method="_on_refusal_b_pop_hide"]
[connection signal="b_pressed" from="main-cir/refusal" to="." method="_on_refusal_b_pressed"]
[connection signal="b_pressed" from="accept" to="." method="_on_accept_b_pressed"]
